--- a/product.html
+++ b/product.html
@@ -21,7 +21,7 @@
   <body>
     <div class="header-container">
       <div>
-        <a href="main.html"
+        <a href="index.html"
           ><img
             class="logo-header"
             src="logo-name/Banner-removebg-preview-1.png"
